# SimpleMemo

./: CMakeLists.txt  main.cpp
Aritfacts/: TODO_List
Source/: CMakeLists.txt
Source/Config/: ChronoSerialization.h  Constants.h
Source/Core/: MainController.cpp  MainController.h  MemoCore.cpp  MemoCore.h
Source/Entity/: MemoBookmark.cpp  MemoBookmark.h  MemoData.cpp  MemoData.h  MemoStorage.cpp  MemoStorage.h  TransferEntity.h
Source/Interface/: AbstractInterfaceProvider.h
Source/Interface/Bookmark/: AccessBookmarkInterface.h  AccessBookmarkInterfaceImpl.cpp  AccessBookmarkInterfaceImpl.h  BookmarkInterfaceParameters.h  BookmarkInterfaceProvider.cpp  BookmarkInterfaceProvider.h  HistoryInterfaceProvider.cpp  HistoryInterfaceProvider.h
Source/Interface/Memo/: AccessMemoInterface.h  AccessMemoInterfaceImpl.cpp  AccessMemoInterfaceImpl.h  MemoInterfaceParameters.h  MemoInterfaceProvider.cpp  MemoInterfaceProvider.h
Source/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
Source/Utility/: AbstractSingleton.h  CMakeLists.txt  Commons.h  Comparer.h  CompressUtility.h  Crypto.h  EventMonitor.cpp  EventMonitor.h  ParameterDecorator.h  SerializationUtility.h  StateMachine.cpp  StateMachine.h  TraverseHelper.h  UUIDUtility.h  XMLUtility.h
Test/: CMakeLists.txt  SerializationTest.cpp  main.cpp
